--- a/app/views/calculations/sqrt_form.html.erb
+++ b/app/views/calculations/sqrt_form.html.erb
@@ -1,10 +1,10 @@
-<h1>Square Calculation</h1>
-<form action="/square/results">
+<h1>Square Root Calculation</h1>
+<form action="/square_root/results">
   <div>
   <label for="num">
     Enter a number
   </label>
   <input type="text" name="num" id="num">
 </div>
-  <button>Calculate square</button>
+  <button>Calculate square root</button>
 </form>
