--- a/app/views/calculations/square.html.erb
+++ b/app/views/calculations/square.html.erb
@@ -1,4 +1,5 @@
 <h1>Square Results</h1>
 <p>
-  The square of <%= @the_number %> is <%= @the_number ** 2 %>
+  The square of <%= @num %> is <%= @num ** 2 %>
 </p>
+<a href="/square/new">Calculate another square</a>
